MIN Update download counts

--- a/paper.tex
+++ b/paper.tex
@@ -195,9 +195,8 @@ Mahotas includes a full test suite. Every function has at least one
 corresponding test case. There are no known bugs.
 
 It has been available in the Python Package Index since April~2010 and has been
-downloaded over 5500~times. Mahotas is available as a FreeBSD package and is
-under evaluation for inclusion in the Debian distribution (which will cause it
-to be available as a native package for its derivatives, most famously Ubuntu).
+downloaded over 20,000~times. This does not include any downloads from other
+sources.
 
 \subsection*{Acknowledgements}
 
@@ -208,14 +207,14 @@ good \cpp{} library by Davis King. I also gleaned some insight into the
 implementation of these features from Christopher Evan's OpenSURF library and
 its documentation \citep{evans2009}.\footnote{OpenSURF is available at
 \url{http://www.chrisevansdev.com/computer-vision-opensurf.html}, where several
-documents describe details of the implementation.} The image loading code,
-which interfaces with the FreeImage library, was written by Zachary Pincus and
-some of the support code was written by Peter J. Verveer for the
-\code{scipy.ndimage} project. All of these contributions were integrated while
-respecting the software licenses under which the original code had been
-released. Robert Webb, a summer student, worked with me on the local binary
-patterns implementation. Finally, I thank the several users who have reported
-bugs and submitted small fixes and participated on the project mailing list.
+documents describe details of the implementation.} The code which interfaces
+with the FreeImage library, was written by Zachary Pincus and some of the
+support code was written by Peter J. Verveer for the \code{scipy.ndimage}
+project. All of these contributions were integrated while respecting the
+software licenses under which the original code had been released. Robert Webb,
+a summer student, worked with me on the local binary patterns implementation.
+Finally, I thank the several users who have reported bugs and submitted small
+fixes and participated on the project mailing list.
 
 \printbibliography
 \end{document}
