ENH Copy references from thesis

--- a/references.bib
+++ b/references.bib
@@ -1,1 +1,17 @@
+@book{Stroustrup1994,
+author = {Stroustrup, Bjarne},
+isbn = {0-201-54330-3},
+month = jan,
+publisher = {Addison-Wesley Professional},
+title = {{The design and evolution of C++}},
+url = {http://portal.acm.org/citation.cfm?id=193198},
+year = {1994}
+}
 
+@article{Evans2009,
+author = {Evans, Christopher},
+file = {:home/luispedro/bibliography/organised/Evans/Evans - 2009 - Notes on the OpenSURF Library SURF Speeded Up Robust Features.pdf:pdf},
+number = {1},
+title = {{Notes on the OpenSURF Library SURF : Speeded Up Robust Features}},
+year = {2009}
+}
