TXT I just added wavelets to mahotas

--- a/paper.tex
+++ b/paper.tex
@@ -66,6 +66,7 @@ complex operations.
 \item[thresholding] some thresholding methods.
 \item[polygon operations] convex hull, polygon drawing.
 \item[\textsc{surf}] Speeded-up Robust Features.
+\item[wavelets] Implementation of Haar wavelet decomposition.
 \end{description}
 
 There are a few interface conventions which apply to many functions.
