BIB Add vlfeat reference

--- a/references.bib
+++ b/references.bib
@@ -15,3 +15,22 @@ number = {1},
 title = {{Notes on the OpenSURF Library SURF : Speeded Up Robust Features}},
 year = {2009}
 }
+
+@inproceedings{Vlfeat,
+ author = {Vedaldi, Andrea and Fulkerson, Brian},
+ title = {Vlfeat: an open and portable library of computer vision algorithms},
+ booktitle = {Proceedings of the international conference on Multimedia},
+ series = {MM '10},
+ year = {2010},
+ isbn = {978-1-60558-933-6},
+ location = {Firenze, Italy},
+ pages = {1469--1472},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/1873951.1874249},
+ doi = {10.1145/1873951.1874249},
+ acmid = {1874249},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {computer vision, image classification, object recognition, visual features},
+}
+
