--- a/paper.tex
+++ b/paper.tex
@@ -46,9 +46,10 @@ Index (\url{http://pypi.python.org/pypi/mahotas}).
 
 \section{Introduction}
 
-Mahotas is a computer vision library for the Python. It operates on numpy arrays,
-but its inner loops are implemented in \cpp{} for speed and ease of
-implementation.
+Mahotas is a computer vision library for the Python. It operates on numpy
+arrays~\cite{numpy}. Therefore, it uses all the infrastructure built by that
+project for storing information. However, its inner loops are implemented in
+\cpp{} for speed and ease of implementation.
 
 Version 1.0 has been released recently and this is now a mature, well-tested
 package (the first version was made available over 4~years ago). \footnote{Note
