--- a/references.bib
+++ b/references.bib
@@ -33,4 +33,56 @@ year = {2009}
  address = {New York, NY, USA},
  keywords = {computer vision, image classification, object recognition, visual features},
 }
+@Article{eth_biwi_00517,
+  author = {H. Bay and A. Ess and T. Tuytelaars and L. van Gool},
+  title = {Speeded-up Robust Features (SURF)},
+  journal = {Computer Vision and Image Understanding (CVIU)},
+  year = {2008},
+  month = {June},
+  pages = {346--359},
+  volume = {110},
+  number = {3},
+  keywords = {}
+}
+
+@ARTICLE{numpystructure, 
+author={van der Walt, S. and Colbert, S.C. and Varoquaux, G.}, 
+journal={Computing in Science Engineering}, title={The NumPy Array: A Structure for Efficient Numerical Computation}, 
+year={2011}, 
+month={march-april }, 
+volume={13}, 
+number={2}, 
+pages={22 -30}, 
+keywords={Python programming language;high level language;numerical computation;numerical data;numpy array;data structures;high level languages;mathematics computing;numerical analysis;}, 
+doi={10.1109/MCSE.2011.37}, 
+ISSN={1521-9615},}
+
+@article{Pedregosa:2011:SML:2078183.2078195,
+ author = {Pedregosa, Fabian and Varoquaux, Ga\"{e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and Vanderplas, Jake and Passos, Alexandre and Cournapeau, David and Brucher, Matthieu and Perrot, Matthieu and Duchesnay, \'{E}douard},
+ title = {Scikit-learn: Machine Learning in Python},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {11/1/2011},
+ volume = {999888},
+ month = nov,
+ year = {2011},
+ issn = {1532-4435},
+ pages = {2825--2830},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=2078183.2078195},
+ acmid = {2078195},
+ publisher = {JMLR.org},
+}
+
+@article{10.1109/MCSE.2007.58,
+author = {Travis E. Oliphant},
+title = {Python for Scientific Computing},
+journal ={Computing in Science and Engineering},
+volume = {9},
+issn = {1521-9615},
+year = {2007},
+pages = {10-20},
+doi = {http://doi.ieeecomputersociety.org/10.1109/MCSE.2007.58},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+}
 
