MIN This bears saying

--- a/paper.tex
+++ b/paper.tex
@@ -60,7 +60,8 @@ package (the first version was made available over 4~years ago). \footnote{Note
 for reviewers: the version currently available implements all functionality
 described in this manuscript. I will release it as version 1.0 when this
 manuscript is accepted. Naturally, any bugs that are reported in the
-meanwhile will be addressed.}
+meanwhile will be addressed.} Mahotas runs and is used on different versions of
+Unix (including Linux, SunOS, and FreeBSD), Mac OS X, and Windows.
 
 \section{Functionality and Interface}
 
